feat/add-swagger-documentation-for-matches-endpoints
